Fix issue with thread summary sender wrap

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -785,6 +785,9 @@ $threadInfoLineHeight: calc(2 * $font-12px);
 .mx_ThreadInfo_sender {
     font-weight: $font-semi-bold;
     line-height: $threadInfoLineHeight;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .mx_ThreadInfo_content {
